--- a/Udemy_HTML+CSS/WEB_SITE/css/Style.css
+++ b/Udemy_HTML+CSS/WEB_SITE/css/Style.css
@@ -3,8 +3,35 @@
     font-size: 15px;
 }
 
-a {
+a:hover {
     text-decoration: none;
+}
+
+button:focus, div:focus {
+    outline: none;
+}
+
+.title {
+    color: #061e37;
+    font-size: 45px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.subtitle {
+    color: #b0bec5;
+    font-size: 25px;
+    font-weight: 600;
+    text-align: center;
+    line-height: 25px;
+}
+
+.descr {
+    color: #b0bec5;
+    line-height: 25px;
+    text-align: center;
+    width: 560px;
+    margin: 24px auto 0 auto;
 }
 
 .container {
@@ -15,7 +42,7 @@ a {
 
 .promo {
     min-height: 750px;
-    background: url(../img/bg/2-layers.png) center center/cover no-repeat;
+    background: url(../img/bg/promo_bg.png) center center/cover no-repeat;
     padding: 50px 0;
 }
 
@@ -75,6 +102,497 @@ a {
     background-color: transparent;
     border-radius: 2px;
     border: 1px solid #ffffff;
-    color:#ffffff;
+    color: #ffffff;
     font-style: 12px;
+}
+
+.promo_sign>button:active {
+    outline: none;
+}
+
+.promo_content {
+    display: flex;
+    margin-top: 167px;
+    justify-content: space-between;
+}
+
+.promo_text {
+    width: 45%;
+}
+
+.promo_title {
+    color: #ffffff;
+    font-size: 55px;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 65px;
+    text-transform: uppercase;
+}
+
+.promo_descr {
+    color: #ffffff;
+    font-size: 18px;
+    line-height: 35px;
+    opacity: 0.8;
+}
+
+.promo_btns {
+    margin-top: 38px;
+}
+
+.promo_btn {
+    width: 150px;
+    height: 55px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
+    font-weight: 700;
+    border-radius: 5px;
+    border: none;
+    transition: all 0.3s ease;
+}
+
+.promo_btn_black {
+    background-color: #061e37;
+    color: white;
+    margin-right: 30px;
+}
+
+.promo_btn_black:hover {
+    background-color: #ffffff;
+    color: #061e37;
+}
+
+.promo_btn_white {
+    background-color: #ffffff;
+    color: #061e37;
+}
+
+.promo_btn_white:hover {
+    background-color: #061e37;
+    color: #ffffff;
+}
+
+.promo_video {
+    position: relative;
+}
+
+.promo_video>video {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    border: 1px solid #061e37;
+}
+
+.promo_play {
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    width: 150px;
+    text-align: center;
+    color: #061E37;
+    font-style: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.promo_play>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    background-color: #061e37;
+    margin: 0 auto 22px auto;
+}
+
+.promo_play>div>i {
+    color: white;
+}
+
+
+/* section useful*/
+
+.useful {
+    padding: 100px 0;
+    min-height: 800px;
+}
+
+.useful_content {
+    margin-top: 95px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.useful_item {
+    width: 27%;
+}
+
+.useful_title {
+    text-align: center;
+    color: #061e37;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.useful_descr {
+    color: #78909c;
+    text-align: center;
+    line-height: 20px;
+}
+
+
+.useful_icon>i {
+    font-size: 80px;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 45px;
+}
+
+.useful_icon> {
+    margin-bottom: 80px;
+}
+
+.fa-calendar-days {
+    color: #b388ff;
+}
+
+.fa-user {
+    color: #80d8ff;
+}
+
+.fa-fire-extinguisher {
+    color: #ea80fc;
+}
+
+.useful_btn {
+
+    display: block;
+    width: 150px;
+    height: 55px;
+    text-align: center;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    background-color: #1de9b6;
+    color: #ffffff;
+    border: none;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 78px auto 0 auto;
+    transition: all 0.3s ease;
+}
+
+.useful_btn>span {
+    margin-top: 60px;
+}
+
+.useful_btn:hover {
+    background-color: #249478;
+    cursor: pointer;
+}
+
+/* Progress section*/
+
+.progress {
+    display: flex;
+}
+
+.progress_item {
+    width: 25%;
+    height: 150px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progress_item_buisness {
+    background-color: #80d8ff;
+}
+
+.progress_item_dowload {
+    background-color: #82b1ff;
+}
+
+.progress_item_install {
+    background-color: #b388ff;
+}
+
+.progress_item_users {
+    background-color: #ea80fc;
+}
+
+.progress_wrap {
+    display: flex;
+    align-items: center;
+}
+
+.progress_icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    background-color: #ffffff;
+    border-radius: 100%;
+    margin-right: 23px;
+    color: #ea80fc;
+}
+
+.progress_icon>i {
+    font-style: 30px;
+    color: #82b1ff;
+}
+
+.progress_text {
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 25px;
+}
+
+/* Service section*/
+
+.service {
+    padding: 100px 0;
+}
+
+.service_content {
+    margin-top: 48px;
+}
+
+/* Tabs */
+
+.tabs_item {
+    width: 800px;
+    height: 50px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    background-color: #ffffff;
+    margin: 0 auto 20px auto;
+    padding: 0 25px 25px 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.tabs_item_active {
+    height: 240px;
+    cursor: default;
+}
+
+.tabs_head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    margin: 15px 0;
+}
+
+.tabs_wrap {
+    display: flex;
+    align-items: center;
+}
+
+.tabs_title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #061e37;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-left: 25px;
+}
+
+.tabs_icon i {
+    color: #061e37;
+    font-size: 25px;
+}
+
+.tabs_down i {
+    color: #061e37;
+    font-size: 25px;
+}
+
+.tabs_content {
+    display: flex;
+}
+
+.tabs_img {
+    width: 25%;
+    height: 155px;
+    background: url(../img/tabs/tabs_img.png) center center/cover no-repeat;
+    border-radius: 5px;
+    margin-right: 25px;
+}
+
+.tabs_text {
+    width: 63%;
+    color: #061e37;
+    font-weight: 600;
+    letter-spacing: 0.45px;
+    line-height: 25px;
+}
+
+/* Comment section*/
+
+.comment {
+    min-height: 565px;
+    padding: 87px 0;
+    background: url(../img/bg/comment_bg.png) center center/cover no-repeat;
+}
+
+.comment_wrap {
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+}
+
+.comment_title {
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 45px;
+    line-height: 50px;
+}
+
+.comment_descr {
+    margin-top: 15px;
+    color: #ffffff;
+    line-height: 25px;
+    width: 514px;
+}
+
+.comment_btn {
+    margin-top: 78px;
+    width: 150px;
+    height: 55px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    background-color: #061e37;
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: none;
+}
+
+.comment_btn:hover {
+    background-color: #ffffff;
+    color: #061e37;
+}
+
+.comment_item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 70px;
+}
+
+.comment_item:last-child {
+    margin-bottom: 0;
+}
+
+.comment_icon {
+    width: 60px;
+    height: 60px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 100%;
+    margin-right: 50px;
+}
+
+.comment_name {
+    color: #061e37;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.comment_text {
+    color: #78909c;
+    line-height: 25px;
+    font-style: italic;
+    margin-top: 20px;
+}
+
+.comment_content {
+    width: 650px;
+    min-height: 160px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    background-color: #ffffff;
+    padding: 30px;
+}
+
+
+/* Team section*/
+
+.team {
+    padding: 100px 0 90px;
+}
+
+.team_content {
+    margin-top: 98px;
+}
+
+/* Carousel*/
+
+.carousel {
+    width: 850px;
+    margin: 0 auto;
+    align-items: center;
+    position: relative;
+}
+
+.carousel_name {
+    color: #061e37;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.carousel_text {
+    color: #90a4ae;
+    line-height: 25px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.carousel_links {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.carousel_links a {
+    margin: 0 15px;
+}
+
+.carousel_links i {
+    color: #90a4ae;
+    font-size: 20px;
+}
+
+.carousel_image {
+    width: 160px;
+    height: 160px;
+    border-radius: 100%;
+    margin: 0 auto 60px auto;
+}
+
+
+.carousel_arrow {
+    top: 20%;
+    position: absolute;
+}
+
+.carousel_arrow i {
+
+    font-size: 60px;
+}
+
+.carousel_next {
+    right: 0;
+}
+
+.carousel_prev {
+    left: 0;
 }
